data/derived/comb/progs/unify/prog4382.ml.out
Characters 82-85:
  let m a b = "[" ^ a ^ ";" b ^ "]" in
                        ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
